extensions/spellcheck/src/mozInlineSpellWordUtil.cpp
@@ -44,6 +44,12 @@ inline bool IsConditionalPunctuation(char16_t ch) {
           ch == 0x00B7);                 // MIDDLE DOT
 }
 
+static bool IsAmbiguousDOMWordSeprator(char16_t ch) {
+  // This class may be CHAR_CLASS_SEPARATOR, but it depends on context.
+  return (ch == '@' || ch == ':' || ch == '.' || ch == '/' || ch == '-' ||
+          IsConditionalPunctuation(ch));
+}
+
 // mozInlineSpellWordUtil::Init
 
 nsresult mozInlineSpellWordUtil::Init(TextEditor* aTextEditor) {
@@ -419,15 +425,6 @@ CharClass WordSplitState::ClassifyCharacter(int32_t aIndex,
 
     // now we know left char is a word-char, check the right-hand character
     if (aIndex == int32_t(mDOMWordText.Length() - 1)) {
-      if (mDOMWordText[aIndex] == '\'' || mDOMWordText[aIndex] == 0x2019) {
-        nsUGenCategory prevCategory =
-            mozilla::unicode::GetGenCategory(mDOMWordText[aIndex - 1]);
-        if (prevCategory == nsUGenCategory::kLetter ||
-            prevCategory == nsUGenCategory::kNumber) {
-          // If single quotation mark is last, we don't return separator yet.
-          return CHAR_CLASS_WORD;
-        }
-      }
       return CHAR_CLASS_SEPARATOR;
     }
 
@@ -632,11 +629,13 @@ static bool TextNodeContainsDOMWordSeparator(nsINode* aNode,
   WordSplitState state(nullptr, text, 0, end);
   for (int32_t i = end - 1; i >= 0; --i) {
     if (IsDOMWordSeparator(textFragment->CharAt(i)) ||
-        state.ClassifyCharacter(i, true) == CHAR_CLASS_SEPARATOR) {
+        (!IsAmbiguousDOMWordSeprator(textFragment->CharAt(i)) &&
+         state.ClassifyCharacter(i, true) == CHAR_CLASS_SEPARATOR)) {
       // Be greedy, find as many separators as we can
       for (int32_t j = i - 1; j >= 0; --j) {
         if (IsDOMWordSeparator(textFragment->CharAt(j)) ||
-            state.ClassifyCharacter(j, true) == CHAR_CLASS_SEPARATOR) {
+            (!IsAmbiguousDOMWordSeprator(textFragment->CharAt(j)) &&
+             state.ClassifyCharacter(j, true) == CHAR_CLASS_SEPARATOR)) {
           i = j;
         } else {
           break;
