editor/libeditor/tests/spellcheck.js
@@ -1,13 +1,21 @@
-function isSpellingCheckOk(aEditor, aMisspelledWords) {
+function isSpellingCheckOk(aEditor, aMisspelledWords, aTodo = false) {
   var selcon = aEditor.selectionController;
   var sel = selcon.getSelection(selcon.SELECTION_SPELLCHECK);
   var numWords = sel.rangeCount;
 
-  is(
-    numWords,
-    aMisspelledWords.length,
-    "Correct number of misspellings and words."
-  );
+  if (aTodo) {
+    todo_is(
+      numWords,
+      aMisspelledWords.length,
+      "Correct number of misspellings and words."
+    );
+  } else {
+    is(
+      numWords,
+      aMisspelledWords.length,
+      "Correct number of misspellings and words."
+    );
+  }
 
   if (numWords !== aMisspelledWords.length) {
     return false;
@@ -15,7 +23,11 @@ function isSpellingCheckOk(aEditor, aMisspelledWords) {
 
   for (var i = 0; i < numWords; ++i) {
     var word = String(sel.getRangeAt(i));
-    is(word, aMisspelledWords[i], "Misspelling is what we think it is.");
+    if (aTodo) {
+      todo_is(word, aMisspelledWords[i], "Misspelling is what we think it is.");
+    } else {
+      is(word, aMisspelledWords[i], "Misspelling is what we think it is.");
+    }
     if (word !== aMisspelledWords[i]) {
       return false;
     }
